// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should render CPSPageGrid 1`] = `
@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(2/6*(100% - 6 * 0.5rem) + 1 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(2/6*(100% - 6 * 0.5rem) + 1 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(2/6*(100% - 6 * 0.5rem) + 1 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(2/6*(100% - 6 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <p>
      CPS page grid
    </p>
  </div>
</div>
`;

exports[`Grid should render CPSPageGrid with additional props 1`] = `
@supports (display:grid) {
  .c1 {
    display: block;
  }
}

@media (min-width:63rem) {
  .c0 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

<main
  class="c0"
  role="main"
>
  <div
    class="c1"
    dir="ltr"
  >
    <p>
      CPS page grid
    </p>
  </div>
</main>
`;

exports[`Grid should render Grid with columns 1`] = `
@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    width: calc(33.333333333333336%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    width: calc(33.333333333333336%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    width: calc(33.333333333333336%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    width: calc(33.333333333333336%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    width: calc(33.333333333333336%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c1 {
    width: calc(33.333333333333336%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
  }
}

<div
  class="c0"
  dir="ltr"
>
  <div
    class="c1"
    dir="ltr"
  >
    <p>
      item spanning 2 out of 6 columns
    </p>
  </div>
</div>
`;
